Update the AuthController and some Routes
